# a-sqa-python-sdk

./: README.md  pyproject.toml
doc/: client.md
doc/auth/: oauth-2-authorization-code-grant.md
doc/controllers/: albums.md  artists.md  audiobooks.md  categories.md  chapters.md  episodes.md  genres.md  markets.md  player.md  playlists.md  search.md  shows.md  tracks.md  users.md
doc/models/: album-base.md  album-object.md  artist-discography-album-object.md  artist-object.md  audio-analysis-object.md  audio-features-object.md  audiobook-base.md  audiobook-object.md  author-object.md  categories.md  category-object.md  chapter-base.md  chapter-object.md  chapter-restriction-object.md  context-object.md  copyright-object.md  currently-playing-context-object.md  currently-playing-object.md  cursor-object.md  cursor-paging-object.md  cursor-paging-play-history-object.md  cursor-paging-simplified-artist-object.md  device-object.md  disallows-object.md  episode-base.md  episode-object.md  episode-restriction-object.md  error-object.md  explicit-content-settings-object.md  external-id-object.md  external-url-object.md  followers-object.md  image-object.md  linked-track-object.md  many-albums.md  many-artists.md  many-audio-features.md  many-audiobooks.md  many-chapters.md  many-devices.md  (+74 more)
spotifywebapiwithfixesandimprovementsfromsonallux/: __init__.py  api_helper.py  configuration.py  spotifywebapiwithfixesandimprovementsfromsonallux_client.py
spotifywebapiwithfixesandimprovementsfromsonallux/controllers/: __init__.py  (+16 more)
tests/: http_response_catcher.py
(+164 files in other folders)
