[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "a-sqa-sdk"
description = "testing"
version = "4.5.7"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["test qa"]
authors = [{name = "test", email = "tahaali2000@hotmail.com"}]
urls = {Documentation = "https://qatesting1.dev.apimatic.dev"}
dependencies = ["apimatic-core~=0.2.0, >= 0.2.17", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
